--- a/dailies-md/170324.md
+++ b/dailies-md/170324.md
@@ -18,6 +18,6 @@ Today break from [Ionic](http://ionicframework.com/), focusing on Angular 4 rele
   1. to-read [Time-based Release Cycles](http://angularjs.blogspot.com.br/2016/10/versioning-and-releasing-angular.html#Timebased_release_cycles_18)
   1. to-watch [Talk: Testing with Angular - Some Recipes](https://juristr.com/blog/2017/01/talk-angular-testing-recipes/)
 
-### Angular-cli
+### Angular CLI
 
   1. to-read [1.0.0 (2017-03-24)](https://github.com/angular/angular-cli/blob/master/CHANGELOG.md)
