170331: Ionic full immersion
Ionic Academy: How To Use Cordova Plugins With Ionic 2

--- a/dailies-md/170330.md
+++ b/dailies-md/170330.md
@@ -1,6 +1,6 @@
 ## Day 14
 
-  Back to the [Ionic](http://ionicframework.com/) full immersion! Today checking [Ionic Academy](https://ionicacademy.com), especifically the Creating Your First Ionic 2 App section.
+  Back to the [Ionic](http://ionicframework.com/) full immersion! Today checking [Ionic Academy](https://ionicacademy.com), especifically the "Creating Your First Ionic 2 App" section.
 
 ## Daily Stuff
 
@@ -26,7 +26,7 @@
 
   1. to-check [Ionic 2 Advanced Components](https://github.com/yannbf/ionic2-components)
   1. to-check [Cloud Functions for Firebase](https://firebase.google.com/docs/functions/)
-  1. to-check [](https://ionicacademy.com)
+  1. to-check [Ionic Academy](https://ionicacademy.com)
 
 ### News
 
